Added a VM argument to 'run*' tasks to enable native access (for Java 25).